[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/PhysicsBody/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Boss_SlugTank/Boss-SlugTank_Tank_Cannon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Boss_SlugTank/Boss-SlugTank_Tank_Back.png" type="Texture" id=3]
[ext_resource path="res://Assets/Boss_SlugTank/Boss-SlugTank_Slug.png" type="Texture" id=4]
[ext_resource path="res://Assets/Boss_SlugTank/Boss-SlugTank_Tank_Fore.png" type="Texture" id=5]
[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss-SlugTank/Boss-SlugTank.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 93.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 41.7826
height = 4.89554

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 7 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 15.0
height = 34.0

[sub_resource type="CircleShape2D" id=5]
radius = 608.779

[node name="Boss-SlugTank" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Sprite" parent="." index="0"]
texture = null

[node name="Sprite_Slug" type="Sprite" parent="Sprite" index="0"]
texture = ExtResource( 4 )

[node name="Sprite_BodyBack" type="Sprite" parent="Sprite" index="1"]
texture = ExtResource( 3 )

[node name="Cannon_Anchor" type="Position2D" parent="Sprite" index="2"]
position = Vector2( 10, 0 )
rotation = 0.375246

[node name="Sprite_Cannon" type="Sprite" parent="Sprite/Cannon_Anchor" index="0"]
position = Vector2( -30, 0 )
texture = ExtResource( 2 )

[node name="Projectile_Ref" type="Position2D" parent="Sprite/Cannon_Anchor" index="1"]
position = Vector2( -65, 0.500005 )

[node name="Sprite_BodeFore" type="Sprite" parent="Sprite" index="3"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 50 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 19.1883, 13.849 )
rotation = 0.349066
shape = SubResource( 2 )

[node name="FloorRay" parent="." index="3"]
position = Vector2( 0, 63 )

[node name="Hurtbox" parent="." index="4"]
position = Vector2( -47.7297, 36.416 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -5, -8 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox" index="1"]
position = Vector2( 19, 13.5 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Detection_Player" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Player" index="0"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Detection_Player" to="." method="_on_Detection_Player_body_entered"]
